docs: sync 02-04 design docs with Phase 1 review fixes
- Update 02 ProviderApi to pure marker interface, ChatApi/StreamApi/SimpleApi separation
- Update 03 package structure with protocol/ package, add ProviderApi definition
- Update 04 Phase 1 task list to 16 tasks, align timeline to 3-4 weeks
- Phase 1 design doc: add Mermaid diagrams, SDK justification, deferred items

Co-Authored-By: Claude <noreply@anthropic.com>